# rad

./: TODO  rad.cabal
Numeric/: RAD.hs
