Name:                rad
Version:             0.1
License:             BSD3
License-File:        LICENSE
Copyright:           Edward Kmett 2010
Author:              Edward Kmett 2010
Maintainer:          ekmett@gmail.com
Stability:           Experimental
Homepage:            http://comonad.com/reader/
Synopsis:            Reverse Automatic Differentiation.
Description:
    Reverse-Mode Automatic Differentiation via overloading.
    Existential type \"branding\" is used to prevent sensitivity confusion.
Category:            Math
Build-Type:          Simple
Build-Depends:       base
Exposed-Modules:     Numeric.RAD
