Name:                rad
Version:             0.1.6.4
License:             BSD3
License-File:        LICENSE
Copyright:           Edward Kmett 2010-2012
Author:              Edward Kmett 2010-2012
Maintainer:          ekmett@gmail.com
Stability:           Experimental
homepage:      http://github.com/ekmett/rad/
bug-reports:   http://github.com/ekmett/rad/issues
Synopsis:            Reverse Automatic Differentiation.
Description:
    Reverse-Mode Automatic Differentiation via overloading.
    Existential type \"branding\" is used to prevent sensitivity confusion.
    .
    Deprecated: Use 'ad' instead.

Category:            Math
Build-Type:          Simple
Build-Depends:       base       >= 4   && < 5,
                     data-reify >= 0.5 && < 0.7,
                     containers >= 0.2 && < 0.6,
                     array      >= 0.2 && < 0.5
Exposed-Modules:     Numeric.RAD
Extra-Source-Files:  TODO .travis.yml

source-repository head
  type: git
  location: git://github.com/ekmett/rad.git
