name:          rad
version:       0.1.6.5
license:       BSD3
license-file:  LICENSE
cabal-version: >= 1.6
copyright:     Edward Kmett 2010-2012
author:        Edward Kmett 2010-2012
maintainer:    ekmett@gmail.com
stability:     Experimental
homepage:      http://github.com/ekmett/rad/
bug-reports:   http://github.com/ekmett/rad/issues
synopsis:      Reverse Automatic Differentiation.
build-type:    Simple
description:
    Reverse-Mode Automatic Differentiation via overloading.
    Existential type \"branding\" is used to prevent sensitivity confusion.
    .
    Deprecated: Use 'ad' instead.

source-repository head
  type: git
  location: git://github.com/ekmett/rad.git

library
  category:            Math
  build-type:          Simple
  build-depends:       base       >= 4   && < 5,
                       data-reify >= 0.5 && < 0.7,
                       containers >= 0.2 && < 0.6,
                       array      >= 0.2 && < 0.6
  exposed-modules:     Numeric.RAD
  extra-source-files:  TODO .travis.yml

